syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message HomeAvatarTalkFinishInfo {
	uint32 avatar_id = 1;
	repeated uint32 finish_talk_id_list = 2;
}
