syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "HomeMarkPointFurnitureData.proto";
import "Vector.proto";

message HomeMarkPointSceneData {
	uint32 module_id = 1;
	uint32 scene_id = 2;
	repeated HomeMarkPointFurnitureData furniture_list = 3;
	Vector teapot_spirit_pos = 4;
}
